2006-01-17  Michael Wybrow  <mjwybrow@users.sourceforge.net>

	* packaging/osx-app.sh, packaging/macosx/Resources/etc/fonts/fonts.conf:
	  Use a modified fonts.conf file for Mac OS X that includes the 
	  standard user font directory ~/Library/Fonts.

2006-01-16  Michael Wybrow  <mjwybrow@users.sourceforge.net>

	* src/svg/Makefile_insert: Updated to reflect a previous header
	  file renaming.

2006-01-12 Marco Scholten <mscholtn@xs4all.nl>

	* /src/ui/dialog/inkscape-preferences.cpp & .h:
	  Converted preferences dialog to gtkmm
	* src/ui/widget/preferences-widget.cpp & .h:
	  New files.
	* src/verbs.cpp: updated to start new dialog.

2006-01-11  Michael Wybrow  <mjwybrow@users.sourceforge.net>

	* src/sp-item-group.cpp, src/sp-path.cpp, src/sp-star.cpp,
	  src/extension/internal/svg.cpp, src/ui/widget/ruler.cpp:
	  Fix some compilation problems on Mac OS X after recent
	  includes cleanup.

2006-01-05  Jon A. Cruz  <jon@joncruz.org>

	* src/widgets/desktop-widget.cpp:
	  Corrected resize behavior of canvas/swatches split.

2006-01-06  Mathieu Dimanche  <mdimanche@free.fr>

	* src/util/units.cpp: forcin 'C' locale for reading units.txt file
       Fixes bug #1391348.

2006-01-05  MenTaLguY  <mental@rydia.net>

	* src/libnr/nr-maybe.h: fix constness/local reference issues

2006-01-04  MenTaLguY  <mental@rydia.net>

	* src/Makefile_insert, src/shortcuts-default-xml.cpp,
	  src/shortcuts.cpp, src/shortcuts.xml:

      Moved default shortcuts XML file into a string constant (for now);
	  replaced hard-coded structure with code to read XML file.

2006-01-04  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/extension/internal/ps.cpp (setup): Clarify the meaning of
	  `Print destination', mentioning the new possibility of leaving
	  as empty.
	* (PrintPS::begin) If print destination is an empty string, then
	  don't pass `-P %s' to lpr: just let lpr use its default.
	* (PrintPS::init) Change default print destination from `lp' to empty
	  string.
